Table background fixed for better contrast in admin modal

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -524,6 +524,7 @@ select {
 
 .table {
   text-align:left;
+  background-color: white;
 }
 
 thead {
@@ -591,7 +592,8 @@ tr:nth-child(even) {
   -o-transform: translateY(0%);
 }
 
-.checkout-modal-dialog[data-visible="true"] {
+.checkout-modal-dialog[data-visible="true"],
+.month-detail-modal-dialog[data-visible="true"] {
   margin-block:auto;
   transform: scale(0.9);
   -webkit-transform: scale(0.9);
